--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "45cd5aaf-aa6b-4416-906d-fb43e3312493"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
